CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MODERN-CPP)

set(CMAKE_CXX_STANDARD 11)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-elide-constructors")

# add_executable(item1 ./item1/item1.cpp)
# add_executable(item7 ./item7/item7.cpp)
add_executable(item2 ./item2/item2.cpp)
add_executable(item9 ./item9/item9.cpp)
add_executable(item23 ./item23/item23.cpp)
add_executable(item3 ./item3/item3.cpp)
add_executable(base4 ./base4/base4.cpp)
add_executable(base5 ./base5/base5.cpp)
add_executable(base6 ./base6/base6.cpp)
